@@ -53,6 +53,7 @@ e1c1ced9c5bc8f93ef0faf0a8c7717abf784d10a7b270d2285e8e1f3b93f2bed  giflib-4.1.6.t
 df27ec3ff24671f80b29e6ab1c4971059c14ac3db95406884fc26574631ba8d5  giflib-5.1.4.tar.bz2
 4224a522ac4ee0fd89eb337e7505e280dfb05e2fe1ad44339ba8874081c0451a  glibc-2.7.tar.bz2
 0173c92a0545e6d99a46a4fbed2da00ba26556f5c6198e2f9f1631ed5318dbb2  glibc-2.13.tar.bz2
+bacdb35931149cbf64cb2983207f91a320b7cd866e3b6b6ba57f0b94d74e61ac  glibc-2.15.tar.bz2
 2e293f714187044633264cd9ce0183c70c3aa960a2f77812a6390a3822694d15  glibc-2.19.tar.bz2
 fe481d89d74f01db4f3a671ef1f29df29da74dff5b678517ee659a6f9d819451  glproto-1.4.11.tar.bz2
 990356ebe2e8966aa643287c9a485777957a49299dfb211654df5ff212dec171  glproto-1.4.15.tar.bz2
@@ -64,6 +65,7 @@ a567f7c58018af0a9751e18641fd8434bfcef8307122dabe47dd652ce8bde048  harfbuzz-0.9.2
 472f57f7928ab20a1303a25982c4091db9674c2729bbd692c9a7204e23ea1af4  inputproto-2.0.tar.bz2
 de7516ab25c299740da46c0f1af02f1831c5aa93b7283f512c0f35edaac2bcb0  inputproto-2.2.tar.bz2
 7d26b193f6699f8e9c1e28bf026844b7ecea33dd644402523471be109152c32f  inputproto-2.3.tar.bz2
+5a47ee62053a6acef3a83f506312494be1461068d0b9269d818839703b95c1d1  inputproto-2.3.1.tar.bz2
 75c3ec241e9996504fe02a9ed4d12f16b74ade713972f3db9e65ce95cd27e35d  jpegsrc.v6b.tar.gz
 edfc0b3e004b2fe58ffeeec89f96e3a3c28972c46725ec127d01edf8a1cc7c9a  jpegsrc.v8c.tar.gz
 00029b1473f0f0ea72fbca3230e8cb25797fbb27e58ae2e46bb8bf5a806fe0b3  jpegsrc.v8d.tar.gz
@@ -75,6 +77,7 @@ edfc0b3e004b2fe58ffeeec89f96e3a3c28972c46725ec127d01edf8a1cc7c9a  jpegsrc.v8c.ta
 2d7b9d94ada0e3a6ede6243509883df2ded01c2983e24322759a366283898fea  libdrm-2.4.33.tar.bz2
 d94001ebfbe80e1523d1228ee2df57294698d1c734fad9ccf53efde8932fe4e9  libdrm-2.4.54.tar.bz2
 e20fbbe092177a8422913d8884a1255477456ab5b10b07389fa891a4dce54030  libdrm-2.4.56.tar.bz2
+71960ac8bde7d710992b1bc8879935e8300a870c36bd06f22412d0447e3d96c4  libdrm-2.4.65.tar.bz2
 c21f553f41141a847b2f1a568ec99a3068262821e4e30bc9d4b5d9091aa0b5f7  libfcgi_2.4.0.orig.tar.gz
 3212b88080cf8fa006164d38fc176fafa5c29591c8384f284ab880db0dbf306f  libgcrypt-1.4.4.tar.bz2
 4b62fc516004940a0571025401a0581d49199f1a76dfb5ce6fd63f50db8173fa  libgcrypt-1.5.0.tar.bz2
@@ -87,6 +90,7 @@ cafc9ed6a87c53a35175d5a1220a96ca386696eef2fa059cc0306211f246e55f  libgpg-error-1
 4f93aac6fecb7da2b92871bb9ee33032be6a87b174f54abf8ddf0911a22d29d2  libgpg-error-1.27.tar.bz2
 13055e2f4c645cbd135ce97a7974a5866f9ba3ed8988e686b552f55c30514f04  libICE-1.0.4.tar.bz2
 24a991284d02ff0c789bc8d11ad2e4dffe144cb70f24e28f9ce3e8b1ee08b71e  libICE-1.0.8.tar.bz2
+8f7032f2c1c64352b5423f6b48a8ebdc339cc63064af34d66a6c9aa79759e202  libICE-1.0.9.tar.bz2
 ba321cddd07d1b8c155199af3426fd80b521e238c1e79c52bcdf93fb379a7ed4  libidn-1.8.tar.gz
 7fe625328a6a5d837d723c462c1788affb84d9c9fc0ae5cd0ce9ac7724c34716  libidn-1.25.tar.gz
 dd357a968449abc97c7e5fa088a4a384de57cb36564f9d4e0d898ecc6373abfb  libidn-1.28.tar.gz
@@ -115,12 +119,14 @@ b38de44862a987293cd3d8dfae1c409d514b6c4e794ebc93648febf9afc38918  libtool-2.4.2.
 8c7f867918a3739dc7cabe955179539d4a7ecc52cb42becfd261e5dfbff511ac  libX11-1.3.3.tar.bz2
 c382efd7e92bfc3cef39a4b7f1ecf2744ba4414a705e3bc1e697f75502bd4d86  libX11-1.5.0.tar.bz2
 2aa027e837231d2eeea90f3a4afe19948a6eb4c8b2bec0241eba7dbc8106bd16  libX11-1.6.2.tar.bz2
+cf31a7c39f2f52e8ebd0db95640384e63451f9b014eed2bb7f5de03e8adc8111  libX11-1.6.3.tar.bz2
 ee84415ffedcc1c0d39b3a39c35d0596c89907bba93d22bf85e24d21f90170fc  libXau-1.0.6.tar.bz2
 7153ba503e2362d552612d9dc2e7d7ad3106d5055e310a26ecf28addf471a489  libXau-1.0.7.tar.bz2
 fdd477320aeb5cdd67272838722d6b7d544887dfe7de46e1e7cc0c27c2bea4f2  libXau-1.0.8.tar.bz2
 1ae6c81774a4637e90879d50db9017a2cc6c3f524e1baedc63ba72d44cad2936  libxcb-1.6.tar.bz2
 d2f46811e950710e7e79e45615d24f2c7ec318b9de9dc717972723da58bffa0d  libxcb-1.8.1.tar.bz2
 98d9ab05b636dd088603b64229dd1ab2d2cc02ab807892e107d674f9c3f2d5b5  libxcb-1.10.tar.bz2
+b720fd6c7d200e5371affdb3f049cc8f88cff9aed942ff1b824d95eedbf69d30  libxcb-1.11.1.tar.bz2
 bc6169c826d3cb17435ca84e1b479d65e4b51df1e48bbc3ec39a9cabf842c7a8  libXdamage-1.1.3.tar.bz2
 7c3fe7c657e83547f4822bfde30a90d84524efb56365448768409b77f05355ad  libXdamage-1.1.4.tar.bz2
 d8033a2fae20fed6de4f16b73ad69ca1c511e7da31c88e9bc6e75976187378cb  libXdmcp-1.0.3.tar.bz2
@@ -128,6 +134,7 @@ d8033a2fae20fed6de4f16b73ad69ca1c511e7da31c88e9bc6e75976187378cb  libXdmcp-1.0.3
 ac6a0ff69c52c9b6e2096e5f74e22c8b5eef11ade4e30411cffeb7df32fe4f74  libXext-1.1.2.tar.bz2
 56229c617eb7bfd6dec40d2805bc4dfb883dfe80f130d99b9a2beb632165e859  libXext-1.3.1.tar.bz2
 f829075bc646cdc085fa25d98d5885d83b1759ceb355933127c257e8e50432e0  libXext-1.3.2.tar.bz2
+b518d4d332231f313371fdefac59e3776f4f0823bcb23cf7c7305bfb57b16e35  libXext-1.3.3.tar.bz2
 2e6cd020460e4ef5d5a1d9b5d21143e9f5e580036a79c7de26ae539d7bcb8d74  libXfixes-4.0.5.tar.bz2
 537a2446129242737a35db40081be4bbcc126e56c03bf5f2b142b10a79cda2e3  libXfixes-5.0.tar.bz2
 63bec085084fa3caaee5180490dd871f1eb2020ba9e9b39a30f93693ffc34767  libXfixes-5.0.1.tar.bz2
@@ -161,6 +168,7 @@ da5e86c32ee2069b9e6d820e4c2e4242d4877cb155a2b2fbf2675a1480ec37b8  libXxf86vm-1.1
 3394571bb4d48754161ecfcf2502b9ca377f8da2ac3e84fd408d56a30d9490d1  linux-3.2.27.tar.xz
 fcd2fe4039246480f43ec4b8c965a9b04c316e4061a88b9fd867656b412d11da  linux-3.13.11.tar.xz
 73dd8456b42020ea2c2fb9854c98445cfe9724bb05d428cd17077f6e3854a36e  linux-3.16.7.tar.xz
+710feac762ac51171f80d1db132126405a01ba948e74c1e61c16a407f3e9c5f6  linux-4.2.8.tar.xz
 f7a80575f3724ac3d9b19eaeab802892ece7e4b0061dd6425b4b789353e25425  makedepend-1.0.5.tar.bz2
 f3e69023771e23908f5d5592954d8271d3d6af09693cecfd29cee6fde8550dc8  make-3.81.tar.bz2
 e2c1a73f179c40c71e2fe8abf8a8a0688b8499538512984da4a76958d0402966  make-3.82.tar.bz2
@@ -168,6 +176,7 @@ e2c1a73f179c40c71e2fe8abf8a8a0688b8499538512984da4a76958d0402966  make-3.82.tar.
 96812c59b0923314914185a2b064eb5245f1228a319c4db94835ce1c84da407f  MesaLib-8.0.3.tar.bz2
 f3ae730ed81fffcb1ec59076813f9955157da7a1dd9ba23a6b1b8ff8cf6798b0  MesaLib-10.1.1.tar.bz2
 6fc567e00a547a967b232bd3b29c42952d87e38128cad9d04471607ffe17523c  MesaLib-10.1.4.tar.bz2
+71c69f31d3dbc35cfa79950e58a01d27030378d8c7ef1259a0b31d4d0487f4ec  mesa-10.5.9.tar.xz
 bbc8cc3ed5afb5482f531949f5de86b6d24ea5d85bce7b35c49917c300159da9  mxml-2.10.tar.gz
 7d3dfe661e50908fe41aef9b97ba6f7f158cab5208515c6be9f5bc9daf032329  mxml-2.11.tar.gz
 d2000ced54662e509adde1d781bf78526cc50fb4498d97a022d6f673c7bd175c  opencv-3.2.0.zip
@@ -287,6 +296,7 @@ fcc958530560fb94791988c6b1fafe05eb51d805dee7390e73021592d2b6ac88  SQLite-ada05cf
 22fd342bf10d3352008c17612d02783d9ee62895c1ed56e0dd40106794ce1096  SQLite-f5b5a13f.tar.gz
 f7f19bc200e14233724bcc468d9c3682f858ee67260b4d3acd13f0b6aaa90bb4  SQLite-ff691a6b.tar.gz
 1303e91a1c752b69a32666a407e9fbdd6e936def4b09bc7de30f416301530d68  texinfo-4.13.tar.gz
+1303e91a1c752b69a32666a407e9fbdd6e936def4b09bc7de30f416301530d68  texinfo-4.13a.tar.gz
 6b8ca30e9b6f093b54fe04439e5545e564c63698a806a48065c0bba16994cf74  texinfo-5.2.tar.gz
 a2d754b7349982e33f12d798780316c047a3b264240dc6bbd4641542e57a0b7a  tidy-html5-5.4.0.tar.xz
 be88f037080b93ce0a337b2b3ca5e8195f76885deb6c558cc3aa872ee848fc76  tiff-3.8.2.tar.gz
@@ -304,6 +314,7 @@ fba9805f7415aebf5b88614de83802dc59d3282ff339128da41addf7e375d2d2  vlc-2.0.3.tar.
 f52bc1159b12496f002404eb5793c01277b20c82cb72c5ff076d7b25da9b5ca2  xcb-proto-1.6.tar.bz2
 ad5d99887d811c9817f1916d7b3f5dc6c21414c093256cbeffb945aacdc34437  xcb-proto-1.7.1.tar.bz2
 7ef40ddd855b750bc597d2a435da21e55e502a0fefa85b274f2c922800baaf05  xcb-proto-1.10.tar.bz2
+b4aceee6502a0ce45fc39b33c541a2df4715d00b72e660ebe8c5bb444771e32e  xcb-proto-1.11.tar.bz2
 6d0abd31ddd57c2cb24cecf5fd90b4c29a276e20e3e03ca3c2c57d074f964d99  xextproto-7.1.1.tar.bz2
 7c53b105407ef3b2eb180a361bd672c1814524a600166a0a7dbbe76b97556d1a  xextproto-7.2.1.tar.bz2
 f3f4b23ac8db9c3a9e0d8edb591713f3d70ef9c3b175970dd8823dfc92aa5bb0  xextproto-7.3.0.tar.bz2
@@ -313,9 +324,11 @@ ba9220e2c4475f5ed2ddaa7287426b30089e4d29bd58d35fad57ba5ea43e1648  xf86bigfontpro
 9b2c1fdc5b3780cedc9f5d9caf8f1364f26d07f8502b0eccdde74319157f9d01  xproto-7.0.17.tar.bz2
 ade04a0949ebe4e3ef34bb2183b1ae8e08f6f9c7571729c9db38212742ac939e  xproto-7.0.23.tar.bz2
 636162c1759805a5a0114a369dffdeccb8af8c859ef6e1445f26a4e6e046514f  xproto-7.0.26.tar.bz2
+29e85568d1f68ceef8a2c081dad9bc0e5500a53cfffde24b564dc43d46ddf6ca  xproto-7.0.28.tar.bz2
 cc71a391f4da8176e5daeeac1ddf5137ba5e8d2263cb93a49f9e2a9976b90899  xtrans-1.2.5.tar.bz2
 7f811191ba70a34a9994d165ea11a239e52c527f039b6e7f5011588f075fe1a6  xtrans-1.2.7.tar.bz2
 054d4ee3efd52508c753e9f7bc655ef185a29bd2850dd9e2fc2ccc33544f583a  xtrans-1.3.4.tar.bz2
+adbd3b36932ce4c062cd10f57d78a156ba98d618bdb6f50664da327502bc8301  xtrans-1.3.5.tar.bz2
 3dce6601b495f5b3d45b59f7d2492a340ee7e84b5beca17e48f862502bd5603f  yasm-1.3.0.tar.gz
 1795c7d067a43174113fdf03447532f373e1c6c57c08d61d9e4e9be5e244b05e  zlib-1.2.3.tar.gz
 fa9c9c8638efb8cb8ef5e4dd5453e455751e1c530b1595eed466e1be9b7e26c5  zlib-1.2.7.tar.gz
