@@ -1,4 +1,5 @@
 --- v3.2 (2018-xx-xx) ---
+* Add support of AstraLinux 1.5 [amd64] (static and shared).
 * Update in all static configs:
   - OPENSSL_VER from 1.0.2n to 1.0.2o
 
